tests/errors/pattern-ref-ownership-vector-rest-alias.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  var values: Vec[own i64] = [make_owned(1), make_owned(2), make_owned(3)];
  let ref [first, rest @ ..] = values;
  drop values;
  return 0;
}
